[gd_scene load_steps=10 format=3 uid="uid://c4tvo47nahi4h"]

[ext_resource type="StyleBox" uid="uid://s4015jqriuh3" path="res://styles/PanelStyleTransparent.tres" id="1"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://coi010tlbihnq" path="res://menus/PromptPanel.tscn" id="3"]
[ext_resource type="Script" path="res://menus/UniversalScrollList.gd" id="4"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="5"]
[ext_resource type="Script" path="res://menus/FolderManager.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://r6cc2m204dqw" path="res://menus/HBConfirmationWindow.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://dtchd3yrqrcbd" path="res://menus/HBTextInput.tscn" id="9"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 0.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[node name="Panel" type="PanelContainer"]
offset_left = 586.0
offset_top = 275.0
offset_right = 1334.0
offset_bottom = 804.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme = ExtResource("5")
theme_override_styles/panel = SubResource("1")
script = ExtResource("6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10

[node name="HBScrollList" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("4")
container_path = NodePath("VBoxContainer")
horizontal_step = 0
scroll_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBScrollList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Panel4" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(158, 53)
layout_mode = 2
action_name = "gui_left"
text = "Close"

[node name="InputGlyphRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel4/HBoxContainer" index="0"]
action_text = "Close"
action_name = &"gui_left"

[node name="Panel5" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(149, 53)
layout_mode = 2
action_name = "gui_right"
text = "Open"

[node name="InputGlyphRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel5/HBoxContainer" index="0"]
action_text = "Open"
action_name = &"gui_right"

[node name="Panel8" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(170, 53)
layout_mode = 2
action_name = "gui_accept"
text = "Select"

[node name="InputGlyphRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel8/HBoxContainer" index="0"]
action_text = "Select"
action_name = &"gui_accept"

[node name="Panel7" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3")]
custom_minimum_size = Vector2(146, 53)
layout_mode = 2
action_name = "gui_cancel"
text = "Back"

[node name="InputGlyphRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel7/HBoxContainer" index="0"]
action_text = "Back"
action_name = &"gui_cancel"

[node name="DeleteConfirmationWindow" parent="." instance=ExtResource("8")]
layout_mode = 2
text = "Do you want to delete this folder?"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 10
script = ExtResource("2")
orientation = 1

[node name="TextInputCreate" parent="." instance=ExtResource("9")]
visible = false
layout_mode = 2

[node name="TextInputRename" parent="." instance=ExtResource("9")]
visible = false
layout_mode = 2

[editable path="MarginContainer/VBoxContainer/HBoxContainer/Panel4"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer/Panel5"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer/Panel8"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer/Panel7"]
